--- a/source/engine/Quasar.Windows/Quasar.Windows.csproj
+++ b/source/engine/Quasar.Windows/Quasar.Windows.csproj
@@ -35,4 +35,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Quasar\Quasar.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="OpenAL32.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
