[Tests] Add OpenAL and OpenGL context initialization tests

--- a/source/engine/Quasar.OpenAL.Tests/Quasar.OpenAL.Tests.csproj
+++ b/source/engine/Quasar.OpenAL.Tests/Quasar.OpenAL.Tests.csproj
@@ -24,5 +24,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Quasar.OpenAL\Quasar.OpenAL.csproj" />
+    <ProjectReference Include="..\Quasar.Windows\Quasar.Windows.csproj" />
   </ItemGroup>
 </Project>
