[Quasar] Add performance comparison test for Transform implementation + Fix some test namespaces.

--- a/source/engine/Quasar.Tests/Quasar.Tests.csproj
+++ b/source/engine/Quasar.Tests/Quasar.Tests.csproj
@@ -25,4 +25,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Quasar\Quasar.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Performance\Legacy\" />
+  </ItemGroup>
 </Project>
