[Graphics] Add OpenGL matrix factory and tests

--- a/source/engine/Quasar.OpenGL.Tests/Quasar.OpenGL.Tests.csproj
+++ b/source/engine/Quasar.OpenGL.Tests/Quasar.OpenGL.Tests.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Quasar.OpenGL\Quasar.OpenGL.csproj" />
+    <ProjectReference Include="..\Quasar.Tests\Quasar.Tests.csproj" />
     <ProjectReference Include="..\Quasar.Windows\Quasar.Windows.csproj" />
   </ItemGroup>
 </Project>
