[Rendering] Add material framework

--- a/source/engine/Quasar.OpenGL/Quasar.OpenGL.csproj
+++ b/source/engine/Quasar.OpenGL/Quasar.OpenGL.csproj
@@ -17,8 +17,9 @@
     <None Remove="Resources\Shaders\Fallback.vert" />
     <None Remove="Resources\Shaders\Includes\Matrices\MVP.inc" />
     <None Remove="Resources\Shaders\Includes\Matrices\Projection.inc" />
-    <None Remove="Resources\Shaders\Test.frag" />
-    <None Remove="Resources\Shaders\Test.vert" />
+    <None Remove="Resources\Shaders\Wireframe.frag" />
+    <None Remove="Resources\Shaders\Wireframe.geom" />
+    <None Remove="Resources\Shaders\Wireframe.vert" />
   </ItemGroup>
 
   <ItemGroup>
@@ -35,10 +36,11 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\Shaders\Includes\Matrices\MVP.inc" />
     <EmbeddedResource Include="Resources\Shaders\Includes\Matrices\Projection.inc" />
-    <EmbeddedResource Include="Resources\Shaders\Test.frag" />
-    <EmbeddedResource Include="Resources\Shaders\Test.vert" />
     <EmbeddedResource Include="Resources\Shaders\UI\UIElement.frag" />
     <EmbeddedResource Include="Resources\Shaders\UI\UIElement.vert" />
+    <EmbeddedResource Include="Resources\Shaders\Wireframe.frag" />
+    <EmbeddedResource Include="Resources\Shaders\Wireframe.geom" />
+    <EmbeddedResource Include="Resources\Shaders\Wireframe.vert" />
   </ItemGroup>
 
   <ItemGroup>
