Add update and rendering frame profiler.

--- a/source/engine/Quasar/Quasar.csproj
+++ b/source/engine/Quasar/Quasar.csproj
@@ -44,4 +44,8 @@
   <ItemGroup>
     <None Include="..\..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pipelines\Profiler\" />
+  </ItemGroup>
 </Project>
