Add expandable/shrinkable native array

--- a/source/engine/Quasar.Tests/Quasar.Tests.csproj
+++ b/source/engine/Quasar.Tests/Quasar.Tests.csproj
@@ -12,6 +12,10 @@
     <UseWindowsForms>True</UseWindowsForms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants);QUASAR_BOUNDS_CHECKS</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Include="..\..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
