--- a/source/engine/Quasar/Quasar.csproj
+++ b/source/engine/Quasar/Quasar.csproj
@@ -11,6 +11,10 @@
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants);QUASAR_BOUNDS_CHECKS</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="UI\VisualElements\**" />
     <EmbeddedResource Remove="UI\VisualElements\**" />
