[UI] Add UI templates/themes/styles framework skeleton

--- a/source/engine/Quasar.Tests/Quasar.Tests.csproj
+++ b/source/engine/Quasar.Tests/Quasar.Tests.csproj
@@ -21,6 +21,7 @@
     <None Remove="Resources\Styles\Includes\Variables.qss" />
     <None Remove="Resources\Styles\Styles.qss" />
     <None Remove="Resources\Styles\Theme.tss" />
+    <None Remove="Resources\Templates\UITemplateTest.qxml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,6 +30,7 @@
     <EmbeddedResource Include="Resources\Styles\Includes\Variables.qss" />
     <EmbeddedResource Include="Resources\Styles\Styles.qss" />
     <EmbeddedResource Include="Resources\Styles\Theme.tss" />
+    <EmbeddedResource Include="Resources\Templates\UITemplateTest.qxml" />
   </ItemGroup>
 
   <ItemGroup>
