--- a/source/engine/Quasar/Quasar.csproj
+++ b/source/engine/Quasar/Quasar.csproj
@@ -16,6 +16,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Themes\Quasar\BaseStyles.qss" />
+    <None Remove="Resources\Themes\Quasar\Textures\Border.png" />
+    <None Remove="Resources\Themes\Quasar\Textures\Button.png" />
+    <None Remove="Resources\Themes\Quasar\Textures\ButtonActive.png" />
+    <None Remove="Resources\Themes\Quasar\Textures\ButtonHover.png" />
+    <None Remove="Resources\Themes\Quasar\Textures\HorizontalLine.png" />
+    <None Remove="Resources\Themes\Quasar\Textures\LinearProgressBar.png" />
+    <None Remove="Resources\Themes\Quasar\Textures\Panel.png" />
     <None Remove="Resources\Themes\Quasar\Theme.tss" />
     <None Remove="Resources\Themes\Quasar\Variables.qss" />
   </ItemGroup>
@@ -34,6 +42,14 @@
     <EmbeddedResource Include="Resources\FontFamilies\Conthrax.fnt" />
     <EmbeddedResource Include="Resources\Textures\Fallback.png" />
     <EmbeddedResource Include="Resources\Textures\FallbackNormalMap.png" />
+    <EmbeddedResource Include="Resources\Themes\Quasar\BaseStyles.qss" />
+    <EmbeddedResource Include="Resources\Themes\Quasar\Textures\Border.png" />
+    <EmbeddedResource Include="Resources\Themes\Quasar\Textures\Button.png" />
+    <EmbeddedResource Include="Resources\Themes\Quasar\Textures\ButtonActive.png" />
+    <EmbeddedResource Include="Resources\Themes\Quasar\Textures\ButtonHover.png" />
+    <EmbeddedResource Include="Resources\Themes\Quasar\Textures\HorizontalLine.png" />
+    <EmbeddedResource Include="Resources\Themes\Quasar\Textures\LinearProgressBar.png" />
+    <EmbeddedResource Include="Resources\Themes\Quasar\Textures\Panel.png" />
     <EmbeddedResource Include="Resources\Themes\Quasar\Theme.tss" />
     <EmbeddedResource Include="Resources\Themes\Quasar\Variables.qss" />
   </ItemGroup>
