--- a/source/engine/Quasar.OpenGL/Quasar.OpenGL.csproj
+++ b/source/engine/Quasar.OpenGL/Quasar.OpenGL.csproj
@@ -1,60 +1,51 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0-windows</TargetFramework>
-    <ImplicitUsings>disable</ImplicitUsings>
-    <Nullable>disable</Nullable>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-    <UseWindowsForms>True</UseWindowsForms>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>disable</ImplicitUsings>
+        <Nullable>disable</Nullable>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+        <GenerateDocumentationFile>True</GenerateDocumentationFile>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+        <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Resources\Shaders\Fallback.frag" />
-    <None Remove="Resources\Shaders\Fallback.vert" />
-    <None Remove="Resources\Shaders\Includes\Matrices\MVP.inc" />
-    <None Remove="Resources\Shaders\Includes\Matrices\Projection.inc" />
-    <None Remove="Resources\Shaders\Wireframe.frag" />
-    <None Remove="Resources\Shaders\Wireframe.geom" />
-    <None Remove="Resources\Shaders\Wireframe.vert" />
-  </ItemGroup>
+    <ItemGroup>
+        <Compile Include="..\..\AssemblyInfo.Suppressions.shared.cs" Link="Properties\AssemblyInfo.Suppressions.shared.cs" />
+        <Compile Include="..\..\AssemblyInfo.shared.cs" Link="Properties\AssemblyInfo.shared.cs" />
+        <AdditionalFiles Include="..\..\stylecop.json" Link="Properties\stylecop.json" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Compile Include="..\..\AssemblyInfo.Suppressions.shared.cs" Link="Properties\AssemblyInfo.Suppressions.shared.cs" />
-    <Compile Include="..\..\AssemblyInfo.shared.cs" Link="Properties\AssemblyInfo.shared.cs" />
-    <EmbeddedResource Include="Resources\Shaders\Fallback.frag" />
-    <EmbeddedResource Include="Resources\Shaders\Fallback.vert" />
-  </ItemGroup>
+    <ItemGroup>
+        <EmbeddedResource Include="Resources\Shaders\Includes\Matrices\MVP.inc" />
+        <EmbeddedResource Include="Resources\Shaders\Includes\Matrices\Projection.inc" />
+        <EmbeddedResource Include="Resources\Shaders\UI\UIElement.frag" />
+        <EmbeddedResource Include="Resources\Shaders\UI\UIElement.vert" />
+        <EmbeddedResource Include="Resources\Shaders\Wireframe.frag" />
+        <EmbeddedResource Include="Resources\Shaders\Wireframe.geom" />
+        <EmbeddedResource Include="Resources\Shaders\Wireframe.vert" />
+        <EmbeddedResource Include="Resources\Shaders\Fallback.frag" />
+        <EmbeddedResource Include="Resources\Shaders\Fallback.vert" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <AdditionalFiles Include="..\..\stylecop.json" Link="Properties\stylecop.json" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Include="Resources\Shaders\Includes\Matrices\MVP.inc" />
-    <EmbeddedResource Include="Resources\Shaders\Includes\Matrices\Projection.inc" />
-    <EmbeddedResource Include="Resources\Shaders\UI\UIElement.frag" />
-    <EmbeddedResource Include="Resources\Shaders\UI\UIElement.vert" />
-    <EmbeddedResource Include="Resources\Shaders\Wireframe.frag" />
-    <EmbeddedResource Include="Resources\Shaders\Wireframe.geom" />
-    <EmbeddedResource Include="Resources\Shaders\Wireframe.vert" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Include="..\..\.editorconfig" Link=".editorconfig" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\Quasar\Quasar.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <None Include="..\..\.editorconfig" Link=".editorconfig" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Quasar\Quasar.csproj" />
-  </ItemGroup>
+    <Target Name="PushNuGetPackage" AfterTargets="GenerateNuspec">
+        <Exec Command="dotnet nuget push $(OutputPath)$(MSBuildProjectName).$(VersionPrefix).nupkg -s Local"></Exec>
+    </Target>
 </Project>
