--- a/source/engine/Quasar.Assets/Quasar.Assets.csproj
+++ b/source/engine/Quasar.Assets/Quasar.Assets.csproj
@@ -9,6 +9,6 @@
         <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     </PropertyGroup>
     <Target Name="PackAssets" AfterTargets="PreBuildEvent" BeforeTargets="CoreCompile">
-        <Exec Command="$(SolutionDir)Pack.cmd $(ProjectDir)Assets $(SolutionDir)Quasar\Resources\ Quasar.assets" />
+        <Exec Command="$(SolutionDir)Pack.cmd $(ProjectDir)Assets $(SolutionDir)Quasar\Resources\ Quasar assets" />
     </Target>
 </Project>
