[Assets] Fix asset loading order

--- a/source/engine/Quasar.Themes/Quasar.Themes.csproj
+++ b/source/engine/Quasar.Themes/Quasar.Themes.csproj
@@ -9,7 +9,7 @@
         <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     </PropertyGroup>
     <Target Name="PackAssets" AfterTargets="PreBuildEvent" BeforeTargets="CoreCompile">
-        <Exec Command="$(SolutionDir)Pack.cmd $(ProjectDir)Quasar $(SolutionDir)Quasar.Assets\Assets\Themes\ Quasar pack" />
+        <Exec Command="$(SolutionDir)Pack.cmd $(ProjectDir)Quasar $(SolutionDir)Quasar.Assets\Assets\UIThemes\ Quasar pack" />
     </Target>
     <ItemGroup>
       <Content Include="Quasar\BaseStyles.qss"/>
