--- a/source/engine/Quasar.OpenGL/Quasar.OpenGL.csproj
+++ b/source/engine/Quasar.OpenGL/Quasar.OpenGL.csproj
@@ -15,21 +15,37 @@
     <ItemGroup>
       <None Remove="Resources\Shaders\Environment\Skybox.frag" />
       <None Remove="Resources\Shaders\Environment\Skybox.vert" />
+      <None Remove="Resources\Shaders\Includes\Arguments\AmbientLight.inc" />
+      <None Remove="Resources\Shaders\Includes\Arguments\DiffuseMap.inc" />
+      <None Remove="Resources\Shaders\Includes\Arguments\MainLight.inc" />
+      <None Remove="Resources\Shaders\Includes\Arguments\NormalMap.inc" />
+      <None Remove="Resources\Shaders\Includes\Matrices\Model.inc" />
+      <None Remove="Resources\Shaders\Includes\Utilities\NormalMapping.inc" />
+      <None Remove="Resources\Shaders\Unlit.frag" />
+      <None Remove="Resources\Shaders\Unlit.vert" />
     </ItemGroup>
 
     <ItemGroup>
         <Compile Include="..\..\AssemblyInfo.Suppressions.shared.cs" Link="Properties\AssemblyInfo.Suppressions.shared.cs" />
         <Compile Include="..\..\AssemblyInfo.shared.cs" Link="Properties\AssemblyInfo.shared.cs" />
+        <EmbeddedResource Include="Resources\Shaders\Includes\Utilities\NormalMapping.inc" />
         <AdditionalFiles Include="..\..\stylecop.json" Link="Properties\stylecop.json" />
     </ItemGroup>
 
     <ItemGroup>
         <EmbeddedResource Include="Resources\Shaders\Environment\Skybox.frag" />
         <EmbeddedResource Include="Resources\Shaders\Environment\Skybox.vert" />
+        <EmbeddedResource Include="Resources\Shaders\Includes\Arguments\AmbientLight.inc" />
+        <EmbeddedResource Include="Resources\Shaders\Includes\Arguments\DiffuseMap.inc" />
+        <EmbeddedResource Include="Resources\Shaders\Includes\Arguments\MainLight.inc" />
+        <EmbeddedResource Include="Resources\Shaders\Includes\Arguments\NormalMap.inc" />
+        <EmbeddedResource Include="Resources\Shaders\Includes\Matrices\Model.inc" />
         <EmbeddedResource Include="Resources\Shaders\Includes\Matrices\MVP.inc" />
         <EmbeddedResource Include="Resources\Shaders\Includes\Matrices\Projection.inc" />
         <EmbeddedResource Include="Resources\Shaders\UI\UIElement.frag" />
         <EmbeddedResource Include="Resources\Shaders\UI\UIElement.vert" />
+        <EmbeddedResource Include="Resources\Shaders\Unlit.frag" />
+        <EmbeddedResource Include="Resources\Shaders\Unlit.vert" />
         <EmbeddedResource Include="Resources\Shaders\Wireframe.frag" />
         <EmbeddedResource Include="Resources\Shaders\Wireframe.geom" />
         <EmbeddedResource Include="Resources\Shaders\Wireframe.vert" />
